# goit-homeworks

./: .gitignore
2.1-abs-classes/: logs.txt
2.2-poetry + docker/: Dockerfile  pyproject.toml
2.2-poetry + docker/2-2-poetry/: __init__.py  logs.txt
2.2-poetry + docker/2_2_poetry/: Bot.py  logs.txt
2.3.1-threading/: main.py
2.3.2-multiprocessing/: main.py  single.py
2.4.1-html-hw/: main.py  message.html
2.4.1-html-hw/storage/: data.json
2.4.2-sockets-hw/: client.py  server.py
2.5-async_websockets-hw/: main.py  test.py
2.6-DB_Core/: create_db.py  fill_data.py  select_from_db.py  university.db
2.6-DB_Core/queries/: create_university.sql  puery_1.sql  puery_10.sql  puery_11.sql  puery_12.sql  puery_2.sql  puery_3.sql  puery_4.sql  puery_5.sql  puery_6.sql  puery_7.sql  puery_8.sql  puery_9.sql  queries_all.sql
2.7-ORMs/: alembic.ini  connect_db.py  models.py  my_select.py  pyproject.toml  seeds.py
2.7-ORMs/alembic/versions/: 88a710046f98_init.py  c044753c0bf7_init.py
2.8.1-MongoDB/dependencies/: pyproject.toml
2.8.1-MongoDB/src/: connect.py  data_import_script.py  main.py  models.py
2.8.2-Redis/: pyproject.toml
2.8.2-Redis/src/: connect.py  consumer.py  models.py  produser.py
2.9-web_scraping/: pyproject.toml
2.9-web_scraping/data/: authors.json
2.9-web_scraping/src/: data_import_script.py  main.py  parsing.py
