[tool.poetry]
name = "2-8-2-redis"
version = "0.1.0"
description = ""
authors = ["1Pvvv <potap.iv@pm.me>"]
readme = "README.md"
packages = [{include = "2"}]

[tool.poetry.dependencies]
python = "^3.11"
mongoengine = "^0.27.0"
faker = "^19.12.0"
pika = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
