[tool.poetry]
name = "2-8-1-mongodb"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "2"}]

[tool.poetry.dependencies]
python = "^3.11"
pymongo = "^4.5.0"
mongoengine = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
